--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
         <version>6.5.2.Final</version>    
     </dependency>
     <dependency>
+      <groupId>org.reflections</groupId>
+      <artifactId>reflections</artifactId>
+      <version>0.10.2</version>
+  </dependency>
+    <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
       <version>2.2.224</version>      
